--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -8,4 +8,14 @@ builds:
       - linux
       - windows
       - freebsd
+    goarch:
+      - 386
+      - amd64
+      - arm
+      - arm64
+    goarm:
+      - 5
+      - 6
+      - 7
+      - 8
 
