go 1.16 with m1 support, cut down binary size by ~40% with ldflags

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,6 +1,8 @@
 builds:
   - binary: envkey-source
-    ldflags: '-extldflags "-static"'
+    ldflags:
+      - '-s -w'
+      - '-extldflags "-static"'
     env:
       - CGO_ENABLED=0
       - GOROOT_FINAL=/usr/go
